compiler/vectorization/TestFloat16VectorConvChain.java fails with non-standard AVX/SSE settings

XMLWordPrintable

    • b08

        The test fails with -XX:UseAVX=0 -XX:UseSSE=3

        Failed IR Rules (1) of Methods (1)
        ----------------------------------
        1) Method "public static void compiler.vectorization.TestFloat16VectorConvChain.test(short[],short[],short[])" - [Failed IR rules: 1]:
           * @IR rule 1: "@compiler.lib.ir_framework.IR(phase={DEFAULT}, applyIfPlatformAnd={}, applyIfCPUFeatureOr={}, counts={"_#V#VECTOR_CAST_HF2F#_", "_@any", ">= 1", "_#V#VECTOR_CAST_F2HF#_", "_@any", " >= 1"}, applyIfPlatform={}, failOn={}, applyIfPlatformOr={}, applyIfOr={}, applyIfCPUFeatureAnd={}, applyIf={}, applyIfCPUFeature={}, applyIfAnd={}, applyIfNot={})"
             > Phase "PrintIdeal":
               - counts: Graph contains wrong number of nodes:
                 * Constraint 1: "(\\d+(\\s){2}(VectorCastHF2F.*)+(\\s){2}===.*vector[A-Za-z]\\[\\d+\\]:\\{float\\})"
                   - Failed comparison: [found] 0 >= 1 [given]
                   - No nodes matched!
                 * Constraint 2: "(\\d+(\\s){2}(VectorCastF2HF.*)+(\\s){2}===.*vector[A-Za-z]\\[\\d+\\]:\\{short\\})"
                   - Failed comparison: [found] 0 >= 1 [given]
                   - No nodes matched!

          1. log.txt
            81 kB
            Tobias Hartmann
          There are no Sub-Tasks for this issue.

              Assignee:
              Jatin Bhateja
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: