8335860: compiler/vectorization/TestFloat16VectorConvChain.java fails with non-standard AVX/SSE settings